2.2.4
-----
- Added backup duration to reports (Issue #102)
- Altered database schema to accommodate backup duration in reports. Will require (automatic) DB upgrade. BACKUP YOUR DATABSE BEFORE EXECUTING

2.2.3
-----
- Fixed bug where "Not Seen" email was being sent even if backupset was listed as offline (Issue #94)
- Fixed Unhandled Exception bug on CloseEverythingAndExit()
- Added feature to truncate message, warning, and error fields generated by backup jobs (Issue #97)
- Added support for Apprise notifications (https://github.com/caronc/apprise)
- If you specify -x on the command line you no longer need to specify valid outgong email server and account information in the .rc file. 
     However, if you still want to send backup warning emails (i.e. you don't use -w) you still need to enter valid server and account information for the outgoing server. (Issue #99)
- Fixed improper program terminatiopn method (Issue #98)

2.2.2
-----
- Added option to specify backup cycle other than 1 day (Issue 91)

2.2.1
-----
- Added "offline=" option in [source-destination] section to suppress "not seen" message in report (issue #88)
- Addressed issue #90

2.2.0
-----
- Optimize email retrieval by analyzing headers first before downloading entire email. Seeing 40%-60% reduction in running time in tests
- Added options to use keepalive logic for larger inboxes to prevent timeout errors([incoming] inkeepalive= and [outgoing] outkeepalive= options in.rc file)
- Added 'date' header to outgoing emails for RFC compliance (issue #77)
- Added optional progress indicator to stdout to show emails are being read (issue #72)
- Added option to add a "last seen date" summary table for all backup sets on report (issue #73 - [report]lastseen* options in .rc file)
- Added logic to better parse incoming dates to catch simple delimiter errors (issue # 83)
- [main] applyutcoffset in .rc file is now set to 'true' by default on new installations. Avoids negative date different problems (Issue #84)