@@ -209,10 +209,10 @@ def rptBottom(html, text, csv, start, nfld):
         text += '\n' + msgText2
         csv += '\n' + msgCsv2
 
-    html += '<br><br>Report generated by <a href=\'https://github.com/HandyGuySoftware/dupReport\'>dupReport</a> (Twitter: <a href=\'https://twitter.com/DupReport\'>@dupReport</a>)<br>'
+    html += '<br><br>Report generated by <a href=\'https://github.com/HandyGuySoftware/dupReport\'>dupReport</a> Version {}.{}.{} {} (Twitter: <a href=\'https://twitter.com/DupReport\'>@dupReport</a>)<br>'.format(globs.version[0], globs.version[1], globs.version[2], globs.status)
     html += '</body></html>'
-    text += '\n\nReport generated by dupReport (https://github.com/HandyGuySoftware/dupReport) (Twitter: @dupReport)'
-    csv += '\n\"Report generated by dupReport (https://github.com/HandyGuySoftware/dupReport) (Twitter: @dupReport)\"'
+    text += '\n\nReport generated by dupReport (https://github.com/HandyGuySoftware/dupReport) Version {}.{}.{} {} (Twitter: @dupReport)'.format(globs.version[0], globs.version[1], globs.version[2], globs.status)
+    csv += '\n\"Report generated by dupReport (https://github.com/HandyGuySoftware/dupReport) Version {}.{}.{} {} (Twitter: @dupReport)\"'.format(globs.version[0], globs.version[1], globs.version[2], globs.status)
 
     return html, text, csv
 
